# nexus

./: .gitignore  NEXUS_GUIDE.md  README.md  cli.py  demo_adaptive_attack.py  pyproject.toml  report.md  requirements.txt  run.bat  run.sh  setup.py
backend/: config.py  db.py  main.py  nexus_data.db  scan.py
backend/agents/: __init__.py
backend/api/routes/: findings.py  reports.py  scan.py
backend/llm/: __init__.py
backend/nexus/: models.py
backend/nexus/checks/: __init__.py  admin_chain.py  advanced.py  api_checks.py  base.py  creds_checks.py  cve_checks.py  hacktricks.py  idor.py  nosql.py  oauth_check.py  passive.py  sqli.py  ssrf_jwt.py  ssti.py  static_analysis.py  stored_xss.py  traversal.py  xss.py  xxe.py
backend/nexus/crawler/: __init__.py  crawler.py
backend/nexus/engine/: agent_loop.py  auth_flow.py  authenticator.py  check_runner.py  cvss.py  memory.py  (+7 more)
nexus/: __init__.py
nexus/agents/: __init__.py  orchestrator.py  red_team_agent.py
nexus/attacks/: __init__.py  base.py  data_extraction.py  jailbreak.py  model_dos.py  multi_agent.py  prompt_injection.py  rag_poisoning.py
nexus/core/: __init__.py  adapter.py  agent.py  har_decoder.py  reasoner.py  session.py  target.py  verifier.py
nexus/database/: __init__.py  lvd.py
nexus/payloads/: __init__.py  extraction.py  injection.py  jailbreak.py
nexus/recon/: __init__.py  fingerprint.py  scanner.py
nexus/reporting/: __init__.py  reporter.py
nexus/scoring/: __init__.py  lvss.py
scenarios/: __init__.py  scenario_01_basic_injection.py  scenario_02_rag_attack.py  scenario_03_multi_agent.py
(+7 files in other folders)
